code/force-app/main/default/objects/Industry__c/Industry__c.object-meta.xml
<CustomObject>
    <label>Industry</label>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>