code/force-app/main/default/objects/Industry__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>行業別</label>
    <length>100</length>
    <type>Text</type>
</CustomField>