code/force-app/main/default/objects/Industry__c/fields/Industry_Code__c.field-meta.xml
<CustomField>
    <fullName>Industry_Code__c</fullName>
    <label>行業別代碼</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>