code/force-app/main/default/objects/Industry__c/fields/Industry_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Industry_Subcategory__c</fullName>
    <label>行業別子類</label>
    <length>100</length>
    <type>Text</type>
</CustomField>