code/force-app/main/default/objects/Industry__c/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <formula>IF( 
AND(
Value(Industry_Code__c)&lt;=29999,
Value(Industry_Code__c)&gt;=10000),
&quot;主計處行業別&quot;,
&quot;央行放款對象別&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>行業別類型</label>
    <type>Text</type>
</CustomField>