code/force-app/main/default/objects/Industry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Industry_Code__c</columns>
    <columns>NAME</columns>
    <columns>Industry_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>